# EXP

./: .gitignore  DEVELOPER_README.md  README.md  pyproject.toml  test_experiment.py
.github/: copilot-commit-style.md  copilot-instructions.md
.github/workflows/: release.yml  test.yml
demo_experiments/cnn_small_2024-12-28__10-30-00/: metadata.json
demo_experiments/cnn_small_2024-12-28__10-30-00/metrics/: training_metrics.csv
demo_experiments/resnet_baseline_2024-12-28__14-15-00/: metadata.json
demo_experiments/transformer_experiment_2024-12-27__09-20-00/: metadata.json
docs/: example_config.toml  release.md
experiment_manager/: __init__.py
experiment_manager/core/: __init__.py  experiment.py
experiment_manager/integrations/lark/: sync_utils.py
experiment_manager/scheduler/: __init__.py  scheduler.py  state_store.py
experiment_manager/ui/: __init__.py  cli.py  server.py  service.py
experiment_manager/ui/static/: app.js  index.html  styles.css
experiment_manager/utils/: __init__.py  env_cli.py  env_utils.py
test_env/: pyvenv.cfg
tests/: test_experiment_init.py  test_scheduler.py
toy_example/: example_config.toml  long_running_config.toml  run_scheduler.py  simple_cnn_train.py  slow_experiment.py  test_cnn.py
toy_example/metrics/: progress.csv
