 [build-system]
 requires = ["setuptools>=65", "wheel"]
 build-backend = "setuptools.build_meta"

[project]
name = "experiment-manager"
version = "0.1.0"
description = "实验管理框架"
requires-python = ">=3.8"
dependencies = [
    "toml>=0.10.2",
    "psutil>=5.8.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=12.0",
    "lark-oapi>=1.0.30",
]

[tool.setuptools.packages.find]
include = ["experiment_manager*"]
exclude = [
    "tests*",
    "toy_example*",
    "data*",
    "experiments*",
]

[tool.setuptools.package-data]
"experiment_manager.ui" = ["static/**/*"]

[project.scripts]
EXP = "experiment_manager.ui.cli:main"
EMP = "experiment_manager.utils.env_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "toy_example"]
python_files = ["test_*.py"]